tests/baselines/reference/emitArrowFunctionWhenUsingArguments14_ES6.errors.txt
tests/cases/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments14_ES6.ts(5,22): error TS2496: The 'arguments' object cannot be referenced in an arrow function. Consider using a standard function expression.


==== tests/cases/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments14_ES6.ts (1 errors) ====
    
    function f() {
        if (Math.random()) {
            let arguments = 100;
            return () => arguments;
                         ~~~~~~~~~
!!! error TS2496: The 'arguments' object cannot be referenced in an arrow function. Consider using a standard function expression.
        }
    }